
  * Increase default cost for p2p remotes from 200 to 1000.
    This makes git-annex prefer transferring data from special
    remotes when possible.
  * Remove -j short option for --json-progress; that option was already
    taken for --json.
  * vicfg: Include the numcopies configuation.
  * config: New command for storing configuration in the git-annex branch.
  * stack.yaml: Update to lts-7.18.
  * Some optimisations to string splitting code.
  * unused: When large files are checked right into git, avoid buffering
    their contents in memory.
  * unused: Improved memory use significantly when there are a lot
    of differences between branches.

 -- Joey Hess <id@joeyh.name>  Fri, 06 Jan 2017 15:22:06 -0400

git-annex (6.20170101) unstable; urgency=medium

  * XMPP support has been removed from the assistant in this release.
    If your repositories used XMPP to keep in sync, that will no longer
    work, and you should enable some other remote to keep them in sync.
    A ssh server is one way, or use the new Tor pairing feature.
  * p2p --pair makes it easy to pair repositories, over Tor, using
    Magic Wormhole codes to find the other repository.
    See http://git-annex.branchable.com/tips/peer_to_peer_network_with_tor/
  * webapp: The "Share with a friend" and "Share with your other devices"
    pages have been changed to pair repositories using Tor and Magic Wormhole.
  * metadata --batch: Fix bug when conflicting metadata changes were
    made in the same batch run.
  * Pass annex.web-options to wget and curl after other options, so that
    eg --no-show-progress can be set by the user to disable the default
    --show-progress.
  * Revert ServerAliveInterval change in 6.20161111, which caused problems
    with too many old versions of ssh and unusual ssh configurations.
    It should have not been needed anyway since ssh is supposted to
    have TCPKeepAlive enabled by default.
  * Make all --batch input, as well as fromkey and registerurl stdin