@@ -1006,8 +1006,8 @@ Here are all the supported configuration settings.
   Set to false to prevent the git-annex assistant and git-annex sync
   from automatically committing changes to files in the repository.
 
-  To configure the behavior in all repositories, this can be set in
-  [[git-annex-config]].
+  To configure the behavior in all clones of the repository,
+  this can be set in [[git-annex-config]].
 
 * `annex.startupscan`
 
